# ckanext-ondc

./: MANIFEST.in  README.md  dev-requirements.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/ondc/: dataset.yaml  helpers.py  plugin.py  presets.yaml
ckanext/ondc/assets/: script.js  webassets.yml
ckanext/ondc/logic/: action.py  schema.py  validators.py
ckanext/ondc/templates/scheming/form_snippets/: ondc_access_rights.html  ondc_access_url.html  ondc_data_custodian.html  ondc_data_status.html  ondc_date_modified.html  ondc_description.html  ondc_disposal.html  ondc_file_size.html  ondc_format.html  ondc_identifier.html  ondc_keyword.html  ondc_language.html  ondc_legal_authority.html  ondc_licence.html  ondc_location.html  ondc_point_of_contact.html  ondc_publish_date.html  ondc_publisher.html  ondc_purpose.html  ondc_resource_type.html  ondc_security_classification.html  ondc_sensitive_data.html  ondc_temporal_coverage_from.html  ondc_temporal_coverage_to.html  ondc_title.html  ondc_update_frequency.html
ckanext/ondc/tests/: conftest.py  test_action.py  test_actions.py  test_plugin.py  test_validators.py
ckanext/ondc_dataset_example/: plugin.py
ckanext/ondc_dataset_example/templates/package/snippets/: additional_info.html  ondc_name.html  ondc_organization.html  package_form.html
ckanext/ondc_dataset_example/tests/: test_plugin.py
